<resources>
    <string name="app_name">ParkAndGoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Park &amp; Go!</string>
    <string name="nav_header_subtitle">An App For Convenience</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_consumerSupport">Consumer Support</string>
    <string name="call">Call Support</string>
    <string name="email">Send an Email</string>
    <string name="btnAddParking">Add Parking</string>
    <string name="btnParkingR">View Parking</string>
    <string name="btnlogin">Go Ahead! Register</string>
    <string name="txtsignin">Already a Member? Login below</string>
    <string name="txtsignup">New Here? Sign Up</string>
    <string name="menu_help">Help</string>
    <string name="menu_search">Search</string>
    <string name="txtcall">Contact Us:</string>
    <string name="txtEmail">Email Us:</string>
    <string name="btnCall">Call Support</string>
    <string name="btnEmail">Send Us an Email</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnSignIn">Sign In</string>
    <string name="txtTitle">Welcome to Park And Go !</string>
    <string name="edtusername" />
    <string name="edtpassword" />
    <string name="btnsignin">Sign In</string>
    <string name="txtTitle1">Profile Information</string>
    <string name="txtTitle2">Payment Information</string>
    <string name="edtemail" />
    <string name="edtphone" />
    <string name="edtnumberplate" />
    <string name="edtDate" />
    <string name="edtCVV" />
    <string name="edtCardNumber" />
    <string name="imgTitle">Title Image</string>
    <string name="updatePeD">Update Personal Details</string>
    <string name="updateVD">Update Vehicle Details</string>
    <string name="updatePaD">Update Payment Details</string>
    <string name="menu_settings">Settings</string>
    <string name="passwd">Password</string>
    <string name="name">UserName</string>
    <string name="phone">Phone Number</string>
    <string name="CN">Card Number</string>
    <string name="date">Expiry Date (MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="cp">Car Plate</string>
    <string name="Email">Email address</string>
    <string name="btnUpdate">Update</string>
    <string name="menu_menu">Menu</string>
    <string name="tvFrgtPsswd">Forgot Password? Click Here!</string>
    <string name="swtRmbr">Remember Login?</string>
    <string name="menu_receipt">Receipt</string>
    <string name="action_signout">Sign Out</string>
    <string name="tvTitle">Add a Parking</string>
    <string name="tvTitle2">Please Provide Information Below</string>
    <string name="tvBldngCde">Building Code</string>
    <string name="tvCarNum">Car Number Plate</string>
    <string name="tvAptNo">Suite No. of Host</string>
    <string name="tvNoHours">No. of Hours Intended to Park</string>
    <string name="btnPrkngRcpt">View Parking Receipt</string>
    <string name="tv_delete_account">Delete Account</string>
    <string name="update_profile">Update Profile</string>
    <string name="tvPhonedetails">In Case of Serious Queries, Please contact us through call by clicking the Call Button</string>
    <string name="tvEmaildetails">In Case of General Queries, Contact us through an email by clicking the Email button below</string>
    <string name="tvTitleupdate">Update User Profile</string>
    <string name="imgLogin">Login Image</string>
    <string name="txtAddParking">Click below to Add a Parking</string>
    <string name="txtViewParking">Click below to View Parking</string>
    <string name="newname">New User Name</string>
    <string name="tvReceipt">Parking Receipt</string>
    <string name="btnreturn">Return</string>
    <string name="btnDetails">Details</string>

</resources>
