<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.parkandgoapp.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_receipt"
        android:name="com.example.parkandgoapp.ui.receipt.ReceiptFragment"
        android:label="@string/menu_receipt"
        tools:layout="@layout/fragment_receipt" />

    <fragment
        android:id="@+id/nav_updateProfile"
        android:name="com.example.parkandgoapp.ui.updateProfile.UpdateProfileFragment"
        android:label="@string/update_profile"
        tools:layout="@layout/fragment_update_profile" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.parkandgoapp.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.parkandgoapp.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_consumerSupport"
        android:name="com.example.parkandgoapp.ui.consumerSupport.SupportFragment"
        android:label="@string/menu_consumerSupport"
        tools:layout="@layout/fragment_support" />

</navigation>